# graphgate

./: .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile-examples  Dockerfile-standalone-demo  LICENSE  README-cn.md  README.md  benchmark.lua  benchmark.sh  config.toml
.github/workflows/: ci.yml  code-coverage.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  request.rs  response.rs  utils.rs
crates/core/src/executor/: coordinator.rs  fetcher.rs  mod.rs  response.rs  router_table.rs
crates/core/src/executor/introspection/: enum_value.rs  field.rs  input_value.rs  resolver.rs  root.rs  schema.rs  type.rs
crates/core/src/executor/websocket/: controller.rs  protocol.rs  server.rs
crates/core/src/planner/: builder.rs  mod.rs  plan.rs  types.rs
crates/core/src/schema/: builtin.graphql  composed_schema.rs  error.rs  introspection.graphql  mod.rs  schema.rs  type_ext.rs
crates/core/src/validation/: error.rs  mod.rs  test_harness.rs  utils.rs  visitor.rs
crates/core/src/validation/rules/: arguments_of_correct_type.rs  default_values_of_correct_type.rs  fields_on_correct_type.rs  fragments_on_composite_types.rs  known_argument_names.rs  known_directives.rs  known_fragment_names.rs  known_type_names.rs  mod.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  no_unused_variables.rs  overlapping_fields_can_be_merged.rs  possible_fragment_spreads.rs  provided_non_null_arguments.rs  scalar_leafs.rs  unique_argument_names.rs  unique_variable_names.rs  variables_are_input_types.rs  variables_in_allowed_position.rs
crates/core/tests/: fragment_spread.txt  inline_fragment.txt  mutation.txt  possible_interface.txt  possible_union.txt  query.txt  test.graphql  test.rs  test_subscription.rs  variables.txt
crates/handler/: Cargo.toml
crates/handler/src/: constants.rs  executor.rs  fetcher.rs  handler.rs  lib.rs  metrics.rs  playground.html  service_route.rs  shared_route_table.rs
crates/handler/src/introspection/: enum_value.rs  field.rs  input_value.rs  mod.rs  resolver.rs  root.rs  schema.rs  type.rs
crates/handler/src/websocket/: controller.rs  grouped_stream.rs  mod.rs  protocol.rs  server.rs
crates/planner/: Cargo.toml
crates/planner/src/: builder.rs  lib.rs  plan.rs  request.rs  response.rs  types.rs
crates/planner/tests/: enum_variable.txt  fragment_on_interface.txt  fragment_spread.txt  inline_fragment.txt  mutation.txt  node_fragments.txt  possible_interface.txt  possible_union.txt  query.txt  subscribe.txt  test.graphql  test.rs  variables.txt
crates/schema/: Cargo.toml
crates/schema/src/: composed_schema.rs  lib.rs  type_ext.rs  value_ext.rs
crates/transports/: Cargo.toml
crates/transports/src/: coordinator.rs  http.rs  lib.rs  round_robin.rs  transport.rs  utils.rs  websocket.rs  wrapper.rs
crates/validation/: Cargo.toml
crates/validation/src/: error.rs  lib.rs  suggestion.rs  test_harness.graphql  test_harness.rs  utils.rs  visitor.rs
crates/validation/src/rules/: arguments_of_correct_type.rs  default_values_of_correct_type.rs  fields_on_correct_type.rs  fragments_on_composite_types.rs  known_argument_names.rs  known_directives.rs  known_fragment_names.rs  known_type_names.rs  no_fragment_cycles.rs  no_undefined_variables.rs  no_unused_fragments.rs  no_unused_variables.rs  overlapping_fields_can_be_merged.rs  possible_fragment_spreads.rs  provided_non_null_arguments.rs  scalar_leafs.rs  unique_argument_names.rs  unique_variable_names.rs  variables_are_input_types.rs  variables_in_allowed_position.rs
examples/: Dockerfile-accounts  Dockerfile-products  Dockerfile-reviews  accounts.rs  products.rs  reviews.rs
examples/accounts/: Cargo.toml  Dockerfile
examples/accounts/src/: main.rs
examples/builtin_scalar_bug/: bug.rs  config.toml
examples/helm/: Chart.yaml  config.toml  values.yaml
examples/helm/templates/: examples.yaml  graphgate.yaml  jaeger.yaml
examples/products/: Cargo.toml  Dockerfile
examples/products/src/: main.rs
examples/reviews/: Cargo.toml  Dockerfile
examples/reviews/src/: main.rs
src/: config.rs  graphql_filter.rs  http.rs  k8s.rs  main.rs  options.rs  playground.html  shared_coordinator.rs  shared_route_table.rs
