[package]
name = "graphgate"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]
readme = "README.md"

[dependencies]
graphgate-handler = { version = "0.5.0", path = "./crates/handler" }

serde = { version = "1.0.133", features = ["derive"] }
anyhow = "1.0.52"
structopt = "0.3.25"
kube = { version = "0.66.0", features = ["derive", "client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.13.1", features = ["v1_22"], default-features = false }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
warp = { version = "0.3.2", features = ["compression"] }
toml = "0.5.8"
futures-util = "0.3.19"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.15.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.9.0"
prometheus = "0.12.0"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3.2"

[dev-dependencies]
async-graphql = { version = "3.0.24", features = ["apollo_tracing"] }
async-graphql-warp = "3.0.24"
fastrand = "1.6.0"
async-stream = "0.3.2"
futures-util = "0.3.19"

[[example]]
name = "builtin_scalar_bug"
path = "./examples/builtin_scalar_bug/bug.rs"

[workspace]
members = [
    "crates/schema",
    "crates/planner",
    "crates/validation",
    "crates/handler",
]
