[package]
name = "graphgate"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]
readme = "README.md"

[dependencies]
graphgate-handler = { version = "0.5.0", path = "./crates/handler" }

anyhow = "1.0.75"
futures-util = "0.3.28"
k8s-openapi = { version = "0.20.0", features = ["v1_28"], default-features = false }
kube = { version = "0.86.0", features = ["derive", "client", "rustls-tls"], default-features = false }
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.13.0"
prometheus = "0.13.3"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
toml = "0.8.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
warp = { version = "0.3.6", features = ["compression"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.4"

[dev-dependencies]
async-graphql = { version = "6", features = ["apollo_tracing"] }
async-graphql-warp = "6"
async-stream = "0.3.5"
fastrand = "2.0.1"
futures-util = "0.3.28"

[[example]]
name = "builtin_scalar_bug"
path = "./examples/builtin_scalar_bug/bug.rs"

[workspace]
members = [
    "crates/schema",
    "crates/planner",
    "crates/validation",
    "crates/handler",
]
