[package]
name = "graphgate"
version = "0.6.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
graphgate-handler.workspace = true
k8s-openapi = { version = "0.20.0", features = ["v1_28"], default-features = false }
kube = { version = "0.86.0", features = ["derive", "client", "rustls-tls"], default-features = false }
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-prometheus = "0.13.0"
prometheus = "0.13.3"
serde.workspace = true
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
toml = "0.8.2"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }
warp.workspace = true

[target.x86_64-unknown-linux-musl.dependencies.jemallocator]
version = "0.5.4"

[dev-dependencies]
async-graphql.workspace = true
async-graphql-warp.workspace = true
async-stream.workspace = true
fastrand = "2.0.1"

[[example]]
name = "builtin_scalar_bug"
path = "./examples/builtin_scalar_bug/bug.rs"

[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6", features = ["apollo_tracing"] }
async-graphql-warp = "6"
async-stream = "0.3.5"
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = { version = "0.3.28", features = ["sink"] }
globset = "0.4.13"
graphgate-handler = { version = "0.6.0", path = "crates/handler" }
graphgate-planner = { version = "0.6.0", path = "crates/planner" }
graphgate-schema = { version = "0.6.0", path = "crates/schema" }
graphgate-validation = { version = "0.6.0", path = "crates/validation" }
http = "0.2.6"
indexmap = { version = "2.0.2", features = ["serde"] }
once_cell = "1.18.0"
opentelemetry = { version = "0.20.0", features = ["metrics"] }
parser = { version = "6", package = "async-graphql-parser" }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
serde = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["net", "sync", "macros", "time"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
tracing = "0.1.29"
value = { version = "6", package = "async-graphql-value" }
warp = "0.3.6"