[package]
name = "graphgate-core"
version = "0.3.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
parser = { version = "2.5.9", package = "async-graphql-parser" }
value = { version = "2.5.9", package = "async-graphql-value" }
thiserror = "1.0.24"
indexmap = { version = "1.6.2", features = ["serde-1"] }
serde = "1.0.124"
serde_json = "1.0.64"
once_cell = "1.7.2"
spin = "0.7.1"
futures-util = { version = "0.3.13", features = ["sink"] }
tracing = "0.1.25"
async-trait = "0.1.48"
async-stream = "0.3.0"
reqwest = { version = "0.11.2", default-features = false, features = ["native-tls", "gzip", "brotli", "json"] }
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
tokio = { version = "1.3.0", features = ["net", "sync", "macros", "time"] }
tokio-stream = "0.1.4"
anyhow = "1.0.38"
http = "0.2.3"
warp = "0.3.0"

[dev-dependencies]
globset = "0.4.6"
