[package]
name = "graphgate-handler"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
graphgate-schema = { version = "0.5.0", path = "../schema" }
graphgate-planner = { version = "0.5.0", path = "../planner" }

warp = "0.3.2"
indexmap = { version = "1.8.0", features = ["serde-1"] }
futures-util = { version = "0.3.19", features = ["sink"] }
parser = { version = "3.0.21", package = "async-graphql-parser" }
value = { version = "3.0.21", package = "async-graphql-value" }
once_cell = "1.9.0"
tokio = { version = "1.15.0", features = ["net", "sync", "macros", "time"] }
tokio-stream = "0.1.8"
tokio-tungstenite = { version = "0.16.1", features = ["rustls-tls-native-roots"] }
async-stream = "0.3.2"
tracing = "0.1.29"
anyhow = "1.0.52"
http = "0.2.6"
serde = "1.0.133"
serde_json = "1.0.75"
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "gzip", "brotli", "json"] }
async-trait = "0.1.52"
opentelemetry = { version = "0.16.0", features = ["metrics"] }
chrono = { version = "0.4.19", features = ["serde"] }
