[package]
name = "graphgate-handler"
version = "0.6.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
graphgate-planner.workspace = true
graphgate-schema.workspace = true
http.workspace = true
indexmap.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
parser.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
tokio.workspace = true
tracing.workspace = true
value.workspace = true
warp.workspace = true
