[package]
name = "graphgate-planner"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
graphgate-schema = { version = "0.5.0", path = "../schema" }
graphgate-validation = { version = "0.5.0", path = "../validation" }

indexmap = { version = "2.0.2", features = ["serde"] }
parser = { version = "6", package = "async-graphql-parser" }
serde = "1.0.188"
value = { version = "6", package = "async-graphql-value" }

[dev-dependencies]
globset = "0.4.13"
serde_json = "1.0.107"
