[package]
name = "graphgate-planner"
version = "0.6.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
graphgate-schema.workspace = true
graphgate-validation.workspace = true
indexmap.workspace = true
parser.workspace = true
serde.workspace = true
value.workspace = true

[dev-dependencies]
globset.workspace = true
serde_json.workspace = true
