[package]
name = "graphgate-schema"
version = "0.5.1"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
indexmap = { version = "2.0.2", features = ["serde"] }
parser = { version = "6", package = "async-graphql-parser" }
thiserror = "1.0.49"
value = { version = "6", package = "async-graphql-value" }
