[package]
name = "graphgate-schema"
version = "0.6.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
indexmap.workspace = true
parser.workspace = true
thiserror.workspace = true
value.workspace = true
