[package]
name = "graphgate-transports"
version = "0.2.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
graphgate-core = { version = "0.2.0", path = "../core" }

reqwest = { version = "0.11.0", default-features = false, features = ["native-tls", "gzip", "brotli", "json"] }
value= { version = "2.5.9", package = "async-graphql-value" }
async-trait = "0.1.42"
futures-util = { version = "0.3.13", features = ["sink"] }
anyhow = "1.0.38"
url = { version = "2.2.0", features = ["serde"] }
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
tokio = { version = "1.2.0", features = ["net", "sync", "macros", "time"] }
http = "0.2.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.25"
fastrand = "1.4.0"
