[package]
name = "graphgate-validation"
version = "0.5.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
graphgate-schema = { version = "0.5.0", path = "../schema" }

parser = { version = "3.0.24", package = "async-graphql-parser" }
value = { version = "3.0.24", package = "async-graphql-value" }
indexmap = { version = "1.8.0", features = ["serde-1"] }

[dev-dependencies]
once_cell = "1.9.0"
