[package]
name = "graphgate-validation"
version = "0.5.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2021"
description = "GraphGate is Apollo Federation implemented in Rust"
license = "MIT/Apache-2.0"
homepage = "https://github.com/async-graphql/graphgate"
repository = "https://github.com/async-graphql/graphgate"
keywords = ["gateway", "graphql", "federation"]

[dependencies]
graphgate-schema = { version = "0.5.0", path = "../schema" }

indexmap = { version = "2.0.2", features = ["serde"] }
parser = { version = "6", package = "async-graphql-parser" }
value = { version = "6", package = "async-graphql-value" }

[dev-dependencies]
once_cell = "1.18.0"
